[project]
name = "eefinder"
version = "2.0.0"
description = "Tool to analyze endogenous elements (EEs) based on similarity search and junctions of genomic regions."
authors = [
    { name = "Filipe Zimmer Dezordi", email = "zimmer.filipe@gmail.com" },
    { name = "Yago Dias", email = "yag.dias@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1,<9",
    "biopython>=1.79",
    "pandas>=1.4,<2",
    "numpy>=1.23,<2",
]

keywords = [
    "endogenous-elements",
    "endogenous-viral-elements",
    "bioinformatics",
    "genomics",
    "python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = [
    "black>=24.3",
    "pytest>=8.0",
]

[project.scripts]
eefinder = "eefinder.scripts.main:cli"

[project.urls]
Homepage = "https://github.com/WallauBioinfo/EEfinder"
Documentation = "https://github.com/WallauBioinfo/EEfinder/tree/master/docs"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eefinder"]

[tool.black]
line-length = 88
target-version = ["py39", "py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: end-to-end runs of the eefinder CLI (require blast/diamond/bedtools on PATH)",
]
filterwarnings = [
    # pandas 1.5.x internally calls np.find_common_type, deprecated in numpy
    # 1.25; the call lives in pandas, not EEfinder, and is fixed in pandas >= 2.
    # Scope the ignore to this exact message so real warnings still surface.
    "ignore:np.find_common_type is deprecated:DeprecationWarning",
]
